--- a/css/scss/_users.scss
+++ b/css/scss/_users.scss
@@ -1,8 +1,22 @@
+/* VARIABLES */
+html{
+  --user-bg: $default-bg;
+  --user-border-color: $default-bg-darker;
+  --user-font-color: $default-font-color;
+}
+
+html[data-theme='dark'] {
+  --user-bg: $default-bg-dark-lighter;
+  --user-border-color: $default-bg-dark;
+  --user-font-color: $default-font-color-dark;
+}
+
 /* BASE */
 .ms-user{
 	width: 100%;
-	background-color: #fff;
-	border: 1px solid $color-gray-1;
+	background-color: var(--user-bg);
+	border: 1px solid var(--user-border-color);
+	color: var(--user-font-color);
 	overflow: auto;
 	position: relative;
 	box-sizing: border-box;
@@ -19,6 +33,7 @@
 		margin-top: 1rem;
 
 		p {
+			color: var(--user-font-color);
 			line-height: 1.3rem;
 			margin-block-start: 0;
 			margin-block-end: 0;
@@ -28,6 +43,7 @@
 	}
 
 	.ms-user-content{
+		color: var(--user-font-color);
 		box-sizing: border-box;
 		margin: 0 auto;
 		margin-top: 1rem;
@@ -61,5 +77,9 @@
 
 	&.ms-borderless{
 		border: none;
+	}
+
+	&.ms-background{
+		background-color: var(--user-border-color);
 	}
 }
