--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -6,9 +6,9 @@ html{
 }
 
 html[data-theme='dark'] {
-	--btn-bg: $default-bg-dark-lighter;
+	--btn-bg: $default-bg-dark;
 	--btn-font-color: $default-font-color-dark;
-	--btn-border-color: $default-font-color-dark;
+	--btn-border-color: $default-bg-dark;
 }
 
 /* MIXINS */
