--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -1,7 +1,7 @@
 /*
 * minstyle.io - A simple CSS Framework !
 * Repo : https://github.com/Airmime/minstyle.io
-* Version : v1.0.1
+* Version : v1.1.0
 * Website : https://minstyle.io
 */
 
@@ -29,6 +29,7 @@
 @import "_breadcrumbs";
 @import "_pagination";
 @import "_articles";
+@import "menu";
 @import "_browser";
 
 
