--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -1,7 +1,22 @@
+/* VARIABLES */
+html{
+	--form-bg: $default-bg;
+	--form-border-color: $color-gray-1;
+	--form-font-color: $default-font-color;
+	--form-font-color-placeholder: $color-gray-2;
+}
+
+html[data-theme='dark'] {
+	--form-bg: $default-bg-dark;
+	--form-border-color: $default-bg-dark;
+	--form-font-color: $default-font-color-dark;
+	--form-font-color-placeholder: $color-gray-3;
+}
+
 /* MIXIN */
 @mixin input($primaryColor){
 	border: 1px solid $primaryColor;
-	background-color: tint($primaryColor, 97);
+	background-color: var(--form-bg);
 	
 	&:focus {
 		@include box-shadow($primaryColor 0 0 3px);
@@ -29,16 +44,20 @@ textarea,
 select{
 	display: inline-block;
 	width: 100%;
-	height: 2.2rem;
-	appearance: none;
-	background-color: #ffffff;
-	border: 1px solid $color-gray-1;
+	height: 2.3rem;
+	color: var(--form-font-color);
+	background-color: var(--form-bg);
+	border: 1px solid var(--form-border-color);
 	font-size: 1rem;
 	box-shadow: none;
-	padding: 0.4rem 0.8rem;
+	padding: 0 0.8rem;
 	@include box-sizing(border-box);
 	@include border-radius($default-border-radius);
 	@include appearance('none');
+
+	&::placeholder {
+		color: var(--form-font-color-placeholder);
+	}
 	
 	/* COLORS */
 	&.ms-info{
@@ -71,15 +90,15 @@ select{
 	/* SIZES */
 	&.ms-small{
 		height: 1.8rem;
-	  }
-	  
-	  &.ms-medium{
+	}
+
+	&.ms-medium{
 		height: 2.6rem;
-	  }
-	  
-	  &.ms-large{
+	}
+
+	&.ms-large{
 		height: 3rem;
-	  }
+	}
 	
 	/* EVENTS */
 	&:focus {
@@ -124,7 +143,7 @@ select{
 select{
 	min-width: 100px;
 	cursor: pointer;
-	background: #ffffff url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'%3E%3C/path%3E%3C/svg%3E") no-repeat right .5rem center/1rem 1rem;
+	background: var(--form-bg) url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'%3E%3C/path%3E%3C/svg%3E") no-repeat right .5rem center/1rem 1rem;
 }
 
 textarea{
@@ -133,6 +152,6 @@ textarea{
 
 input[disabled]{
 	cursor: not-allowed;
-	background-color: $color-gray-0;
-	border: 1px solid $color-gray-1;
+	background-color: var(--form-bg);
+	border: 1px solid var(--form-border-color);
 }
