Dark theme, Grid, Browser.
- Keep develop dark theme.
- Change grid for boostrap grid.
- Fix browser padding.

--- a/css/scss/_browser.scss
+++ b/css/scss/_browser.scss
@@ -18,7 +18,7 @@ html[data-theme='dark'] {
 
 	.ms-tab-browser{
 
-		padding: 0.4rem 0;
+		padding: 0.4rem 0.6rem;
 
 		.ms-dot{
 			display: inline-block;
