--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -2,7 +2,7 @@
 * minstyle.io - A simple CSS Framework !
 * Repo : https://github.com/Airmime/minstyle.io
 * Version : v1.1.0
-* Website : https://minstyle.io
+* Website : https://minstyle.io/
 */
 
 @import "compass";
