Progress bar, Tabs, Menu
- Keep develop dark theme.
- Fix margin Progress bar.
- Add logo for menu.
- Fix padding menu.

--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -65,7 +65,7 @@ html[data-theme='dark'] {
 		width: auto;
 		height: 100%;
 		float: left;
-		margin: 0 0 0 5%;
+		margin: 0 0 0 15px;
 		color: var(--default-font-color);
 
 		p{
