--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -3667,16 +3667,25 @@ html[data-theme='dark'] {
     padding: 1.7rem 1.2rem;
     font-size: 1.4rem; }
 
+/* VARIABLES */
+html {
+  --progress-bg: #f3f3f3;
+  --progress-bg-fill: #484848; }
+
+html[data-theme='dark'] {
+  --progress-bg: #111417;
+  --progress-bg-fill: #484848; }
+
 /* BASE */
 progress,
 .ms-progress {
   width: 100%;
   height: 1.3rem;
   display: flex;
-  background-color: #f6f6f6;
+  background-color: var(--progress-bg);
   text-align: center;
   overflow: hidden;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
@@ -3687,7 +3696,7 @@ progress,
   progress .ms-progress-fill,
   .ms-progress .ms-progress-fill {
     height: 1.3rem;
-    background-color: #b1b1b1;
+    background-color: var(--progress-bg-fill);
     font-size: 0.75rem;
     text-align: center;
     font-weight: bold;
@@ -4673,12 +4682,21 @@ html[data-theme='dark'] {
       border-bottom: 1px solid var(--card-border-color);
       margin-bottom: 1rem; }
 
+/* VARIABLES */
+html {
+  --tab-font-color: #484848;
+  --tab-border-color: #e1e1e1; }
+
+html[data-theme='dark'] {
+  --tab-font-color: #ffffff;
+  --tab-border-color: #111417; }
+
 /* MIXINS */
 /* BASE */
 .ms-tab {
   width: 100%;
-  color: red;
-  border-bottom: 1px solid #e1e1e1;
+  color: var(--tab-font-color);
+  border-bottom: 1px solid var(--tab-border-color);
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -4704,9 +4722,9 @@ html[data-theme='dark'] {
         padding: 1rem;
         border-bottom: 2px solid transparent; }
         .ms-tab ul li a:hover {
-          border-bottom: 2px solid #e8e8e8; }
+          border-bottom: 2px solid var(--tab-border-color); }
         .ms-tab ul li a.ms-active {
-          border-bottom: 2px solid #b1b1b1; }
+          border-bottom: 2px solid var(--tab-border-color); }
       .ms-tab ul li.ms-logo img {
         max-height: 30px;
         vertical-align: bottom; }
@@ -5048,7 +5066,7 @@ html[data-theme='dark'] {
     width: auto;
     height: 100%;
     float: left;
-    margin: 0 0 0 5%;
+    margin: 0 0 0 15px;
     color: var(--default-font-color); }
     .ms-menu .ms-menu-logo p {
       font-size: 1.2rem;
