--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -1,35 +1,31 @@
 /*
 * minstyle.io - A simple CSS Framework !
 * Repo : https://github.com/Airmime/minstyle.io
-* Version : v1.1.0
+* Version : v2.0.0
 * Website : https://minstyle.io/
 */
 
-@import "compass";
-@import "compass/reset";
-@import "compass/css3";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-@import "_normelize";
-@import "_variables";
+:root{
+    --main-bg: #ffffff;
+    --main-text-color: #000;
+    
+    --primary-bg-color: 34,115,238;
+    --secondary-bg-color: 60,168,118;
+    --action-bg-color: 206,65,76;
+    --action2-bg-color: 255,183,3;
+}
 
-@import "_grid";
-@import "_global";
+html[data-theme='dark'] {
+    --main-bg: #25282c;
+    color: --main-text-color;
+}
+
+html, body{
+    background-color: var(--main-bg);
+    font-family: Inter, sans-serif;
+}
+
 @import "_button";
-@import "_alerts";
-@import "_progressbar";
-@import "_form";
-@import "_typography";
-@import "_label";
-@import "_table";
-@import "_avatars";
-@import "_users";
-@import "_cards";
-@import "_tabs";
-@import "_dropdown";
-@import "_breadcrumbs";
-@import "_pagination";
-@import "_articles";
-@import "menu";
-@import "_browser";
-
-
+@import "_helper";
